# EigenBench

./: CMakeLists.txt  Makefile  README.md  creators.c  creators.h  helper.c  helper.h  main.c  utils.c  utils.h
TestingGrounds/: run_edge.sh  run_stamp_like.sh
